<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="introduce_yourself">Introduce yourself</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_aggree_the">I aggree the</string>
    <string name="most_common_acnes">Most Common Acnes</string>
    <string name="your_daily_read">Your Daily Read</string>
    <string name="hello_name">Hello, name</string>
    <string name="acne_name">Acne Name</string>
    <string name="your_acne_is_similar_to_this_type_of_acne_about">Your acne is similar to this type of acne about</string>
    <string name="long_paragraph_template">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et gravida est. Suspendisse tempus tincidunt efficitur. Donec eu scelerisque dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis rutrum enim in fermentum porta. In luctus eros sed ligula lobortis, sed posuere odio rutrum. Proin sit amet accumsan nibh. Maecenas cursus, odio id laoreet consectetur, diam tellus rhoncus dui, eget scelerisque tellus nunc id lacus. Fusce feugiat dignissim metus nec ullamcorper. Vivamus id metus non diam condimentum rhoncus ut vitae tellus. Cras convallis nibh at purus consectetur maximus. Nunc id nibh ligula. Phasellus pellentesque viverra metus feugiat euismod. </string>
    <string name="short_paragraph_tempalte">Proin mattis eget leo et egestas. Phasellus accumsan orci nulla. Nulla pretium ligula eu tincidunt venenatis. Nulla facilisi. Ut tincidunt nisi id tortor dictum, at convallis diam finibus. Curabitur sed leo aliquam dui imperdiet ullamcorper eget ac lectus. Donec sed commodo lacus. </string>
    <string name="what_are_the_causes_of">What are the causes of</string>
    <string name="tips_for_dealing_with">Tips for dealing with</string>
    <string name="warning_title">WARNING</string>
    <string name="the_information_above_is_not_to_preclude_medical_advice">The information above is not to preclude medical advice</string>
    <string name="feedback">Feedback</string>
    <string name="terms_of_use">terms of use</string>
    <string name="title_activity_home_navigation_drawer">HomeNavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Accepted</string>
    <string name="tab_text_2">Pending</string>
    <string name="tab_text_3">Rejected</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="placeholder_name">Placeholder Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_acne">Name of Acne</string>
    <string name="result_title">Result</string>
    <string name="article_title">Article Title</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="upload">Upload</string>
    <string name="result">Result</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="submit">Submit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_forgot_pasword">ForgotPasword</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="your_acne_possibility">Your Acne Possibility</string>
    <string name="we_have_made_a_prediction_from_the_photo_you_submitted_we_found_a_number_of_s_possibilites">We have made a prediction from the photo you submitted, we found a number of %s possibilites</string>
    <string name="the_highest_possibilites_s">The Highest Possibilites: </string>
    <string name="other_possibilites">Other Possibilites</string>
    <string name="percentage">%s%</string>
    <string name="password_title">Password ?</string>
    <string name="don_t_worry_just_tell_me_your_email">Don\'t worry, just tell me your email</string>
    <string name="send">Send</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="new_here">New here ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="fit_in_the_best_of_you">Fit in the best of you</string>
    <string name="email_has_been_sent">Email has been sent !</string>
    <string name="now_open_your_email_we_have_sent_you_a_link_to_change_the_password_on_your_account_the_link_will_only_be_active_within_1x24_hours">Now open your email, we have sent you a link to change the password on your account. The link will only be active within 1x24 hours.</string>
    <string name="password_must_be">Password must be more than 6 characters</string>
    <string name="first_name_should_be_filled">First name should be filled</string>
    <string name="gender_should_be_filled">Gender should be filled</string>
    <string name="age_should_be_filled">Age should be filled</string>
    <string name="confirm_password_different">Confirm password should be the same as password</string>
    <string name="email_not_registered">Account with the email is not registered</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="incorrect_email_password">*Incorrect email / password</string>
    <string name="edit">Edit</string>
    <string name="last_name_should_be_filled">Last name should be filled</string>
    <string name="possibility">Possibility:</string>
    <string name="scan_result_s">Scan Result %s</string>
    <string name="name_of_medicice">Name of medicice</string>
    <string name="price_s">Price: %s</string>
    <string name="recommended_medicine">Recommended Medicine</string>
    <string name="thank_you">Thank You!</string>
    <string name="we_hope_you_enjoy_a_good_experience_after_using_the_acne_scan_application_for_criticism_and_suggestions_please_write_below">We hope you enjoy a good experience after using the acne scan application. For criticism and suggestions, please write below!</string>
    <string name="are_the_results_of_acne_detection_correct">Are the results of acne detection correct ?</string>
    <string name="are_the_tips_and_tricks_for_the_treatment_of_acne_clear_and_user_enough">Are the tips and tricks for the treatment of acne clear and user enough</string>
    <string name="suggestions_and_critics">Suggestions and critics :</string>
    <string name="feedback_has_been_sent">Feedback has been sent!</string>
    <string name="thank_you_for_your_availability_to_fill_in_the_feedback_your_feedback_is_meaningful_in_our_future_development">Thank you for your availability to fill in the feedback. Your feedback is meaningful in our future development</string>

    <string name="privacy_policy_link">https://acne-scan-0.flycricket.io/privacy.html</string>
    <string name="terms_conditions_link">https://acne-scan-0.flycricket.io/terms.html</string>
</resources>