<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupActivity">

    <TextView
        android:id="@+id/tv_signup"
        style="@style/Title.LoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_signup_description"
        style="@style/Subtitle.LoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce_yourself"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup" />

    <TextView
        android:id="@+id/tv_first_name"
        style="@style/Title.Form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_first_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_first_name"
        app:layout_constraintTop_toBottomOf="@id/tv_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_last_name"
        style="@style/Title.Form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/last_name"
        app:layout_constraintStart_toEndOf="@id/tf_first_name"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_last_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_last_name"
        app:layout_constraintTop_toBottomOf="@id/tv_last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_gender"
        style="@style/Title.Form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="@id/tv_first_name"
        app:layout_constraintTop_toBottomOf="@id/tf_first_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_gender"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_gender"
        app:layout_constraintTop_toBottomOf="@id/tv_gender">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_age"
        style="@style/Title.Form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/age"
        app:layout_constraintStart_toEndOf="@id/tf_gender"
        app:layout_constraintTop_toBottomOf="@id/tf_last_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_age"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_age"
        app:layout_constraintTop_toBottomOf="@id/tv_age">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email"
        style="@style/Title.Form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/tf_gender"
        app:layout_constraintTop_toBottomOf="@id/tf_gender" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tf_age"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/tv_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        style="@style/Title.Form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/tf_email"
        app:layout_constraintTop_toBottomOf="@id/tf_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tf_email"
        app:layout_constraintEnd_toEndOf="@id/tf_email"
        app:layout_constraintTop_toBottomOf="@id/tv_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_confirm_password"
        style="@style/Title.Form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confirm_password"
        app:layout_constraintStart_toStartOf="@id/tf_password"
        app:layout_constraintTop_toBottomOf="@id/tf_password" />
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tf_password"
        app:layout_constraintEnd_toEndOf="@id/tf_password"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_password">
        
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        style="@style/Title.Button"
        android:text="@string/sign_up"
        android:background="@drawable/gradient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tf_confirm_password"
        app:layout_constraintEnd_toEndOf="@id/tf_confirm_password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tf_confirm_password"
        app:layout_constraintStart_toStartOf="@id/tf_confirm_password"
        android:text="@string/i_aggree_the" />

</androidx.constraintlayout.widget.ConstraintLayout>